# cannon_OMP_laba

./: CMakeLists.txt  run.sh  timings.xls
src/: cannon.c  cannon.h  main.c
